--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Scott Barnes <scottreidbarnes@gmail.com>"]
 python = "^3.10.0"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.6.4"
+python-slugify = "^5.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
