--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,6 @@ ipython = "^7.29.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+climbers-guide-parser = "climbers_guide_parser.parser:get_json"
