--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.10.0"
 beautifulsoup4 = "^4.10.0"
 lxml = "^4.6.4"
 python-slugify = "^5.0.2"
+click = "^8.1.3"
+SQLAlchemy = "^1.4.36"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -22,7 +24,7 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-climbers-guide-parser = "climbers_guide_parser.parser:get_json"
+climbers-guide-parser = "climbers_guide_parser.parser:main"
 
 [tool.black]
 line-length = 100
